@@ -275,6 +275,7 @@ void init_xml_document()
   rb_define_method(klass, "dup", duplicate_node, -1);
   rb_define_method(klass, "url", url, 0);
   rb_undef_method(klass, "parent");
+  rb_undef_method(klass, "namespace");
 }
 
 
